FEAT: add lockDevice and unlockDevice to devices api
this will allow users to force devices to enter/exit kiosk mode
