# lib/units/api/controllers/devices.js
@@ -16,6 +16,8 @@ const uuid = require('uuid')
 const wire = require('../../../wire')
 const wireutil = require('../../../wire/util')
 const wirerouter = require('../../../wire/router')
+var datautil = require('../../../util/datautil')
+var syrup = require('stf-syrup')
 
 /* ------------------------------------ PRIVATE FUNCTIONS ------------------------------- */
 
@@ -26,6 +28,7 @@ function filterGenericDevices(req, res, devices) {
     })
   })
 }
+
 
 function getGenericDevices(req, res, loadDevices) {
   loadDevices(req.user.groups.subscribed).then(function(devices) {
@@ -513,6 +516,123 @@ function deleteDevice(req, res) {
   apiutil.redirectApiWrapper('serial', deleteDevices, req, res)
 }
 
+function unlockDevice(req, res) {
+  var serial = req.swagger.params.serial.value
+  log.info('requesting device unlock ' + serial)
+  syrup.serial()
+    .dependency(require('../adb'))
+    .define(function (options, adb) {
+      adb.listDevices()
+        .then(function (devices) {
+          var isFound = devices.filter(device => device.id === serial).length === 1
+          if (isFound) {
+            adb.shell(serial, 'am broadcast -a de.suitepad.app.jailable.init.d.JailInitService -eaction stop')
+              .timeout(5000)
+              .then(function (out) {
+                res.status(200).json({
+                  success: true,
+                  message: 'device unlocked'
+                })
+              })
+              .catch(function (err) {
+                log.error(err)
+                res.status(500).json({
+                  success: false,
+                  message: 'Internal server error'
+                })
+              })
+          } else {
+            log.error('Device not found')
+            res.status(404).json({
+              success: false,
+              message: 'Device not found'
+            })
+          }
+        })
+        .catch(function (err) {
+          log.error(err)
+          if (err && err.code === 'ECONNREFUSED') {
+            res.status(500).json({
+              success: false,
+              message: 'adb server unreachable'
+            })
+          } else {
+            res.status(500).json({
+              success: false,
+              message: 'Internal server error'
+            })
+          }
+        })
+    })
+    .consume()
+    .catch(function (err) {
+      log.error(err)
+      res.status(500).json({
+        success: false,
+        message: 'Internal server error'
+      })
+    })
+}
+
+function lockDevice(req, res) {
+  var serial = req.swagger.params.serial.value
+  log.info('requesting device lock ' + serial)
+  syrup.serial()
+    .dependency(require('../adb'))
+    .define(function (options, adb) {
+      adb.listDevices()
+        .then(function (devices) {
+          var isFound = devices.filter(device => device.id === serial).length === 1
+          if (isFound) {
+            adb.shell(serial, 'am broadcast -a de.suitepad.app.jailable.init.d.JailInitService -eaction start')
+              .timeout(5000)
+              .then(function (out) {
+                res.status(200).json({
+                  success: true,
+                  message: 'device locked'
+                })
+              })
+              .catch(function (err) {
+                log.error(err)
+                res.status(500).json({
+                  success: false,
+                  message: 'Internal server error'
+                })
+              })
+          } else {
+            log.error('Device not found')
+            res.status(404).json({
+              success: false,
+              message: 'Device not found'
+            })
+          }
+        })
+        .catch(function (err) {
+          log.error(err)
+          if (err && err.code === 'ECONNREFUSED') {
+            res.status(500).json({
+              success: false,
+              message: 'adb server unreachable'
+            })
+          } else {
+            res.status(500).json({
+              success: false,
+              message: 'Internal server error'
+            })
+          }
+        })
+    })
+    .consume()
+    .catch(function (err) {
+      log.error(err)
+      res.status(500).json({
+        success: false,
+        message: 'Internal server error'
+      })
+    })
+}
+
+
 module.exports = {
   getDevices: getDevices
 , getDeviceBySerial: getDeviceBySerial
@@ -524,4 +644,6 @@ module.exports = {
 , removeOriginGroupDevices: removeOriginGroupDevices
 , deleteDevice: deleteDevice
 , deleteDevices: deleteDevices
+, unlockDevice: unlockDevice
+, lockDevice: lockDevice
 }
