# lib/units/api/swagger/api_v1.yaml
@@ -2108,6 +2108,52 @@ paths:
             $ref: "#/definitions/UnexpectedErrorResponse"
       security:
         - accessTokenAuth: []
+  /devices/{serial}/unlock:
+    x-swagger-router-controller: devices
+    get:
+      summary: Disable kiosk mode
+      description: This will force the device to disable kiosk mode
+      operationId: unlockDevice
+      tags:
+        - devices
+      parameters:
+        - name: serial
+          in: path
+          description: Device Serial
+          required: true
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/SuccessResponse"
+        default:
+          description: Unexpected Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /devices/{serial}/lock:
+    x-swagger-router-controller: devices
+    get:
+      summary: Enable kiosk mode
+      description: This will force the device to enable kiosk mode
+      operationId: lockDevice
+      tags:
+        - devices
+      parameters:
+        - name: serial
+          in: path
+          description: Device Serial
+          required: true
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/SuccessResponse"
+        default:
+          description: Unexpected Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /swagger.json:
     x-swagger-pipe: swagger_raw
 definitions:
@@ -2385,6 +2431,12 @@ definitions:
     properties:
       serials:
         description: Comma-separated list of serials
+        type: string
+  SuccessResponse:
+    required:
+      - message
+    properties:
+      message:
         type: string
   ErrorResponse:
     required:
